tests/snapshots/run_wpt_conformance__litert_reduceSum_float32_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum.https.any.js reduceSum float32 0D tensor default options, litert
 reduce_sum :: reduceSum float32 0D tensor default options: index 0: actual=0 expected=69.60386 ulp=1116419373 tolerance=8
  inputs: reduceSumInput: [69.6038589477539]
  expected reduceSumOutput: [69.60386]
  actual reduceSumOutput: [0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumInput: f32[];
  }

  nodes {
    [reduceSumOutput] = reduceSum(reduceSumInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumOutput; }
}
