tests/snapshots/run_wpt_conformance__litert_reduceSum_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum.https.any.js reduceSum float32 0D tensor empty axes, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumInput: f32[];
  }

  nodes {
    [reduceSumOutput] = reduceSum(reduceSumInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceSumOutput; }
}
